--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 .logo {
   padding-top: 25px;
   padding-left: 50px;
+  padding-bottom: 20px;
 }
 
 
@@ -39,4 +40,22 @@ section {
 
 col {
   margin: 10px;
+}
+
+.featured {
+  padding: 20px;
+  text-align: center;
+}
+
+/* .centerBlock {
+  display: table;
+  margin: auto;
+} */
+
+.pics {
+  padding-left: 30px;
+}
+
+h2 {
+  text-align: center; 
 }
