--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ col {
   padding-left: 30px;
 }
 
-h2 {
-  text-align: center; 
+h2, h3 {
+  text-align: center;
+}
+
+h1, h4 {
+  text-align: right;
 }
