--- a/css/main.css
+++ b/css/main.css
@@ -6,32 +6,14 @@
 }
 
 .main-title {
-  width: 50%;
   text-align: right;
   text-transform: uppercase;
   padding-top: 50px;
   padding-bottom: 15px;
 }
 
-.logo {
-  padding-top: 25px;
-  padding-left: 50px;
-  padding-bottom: 20px;
-}
-
-
-section {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.header-container {
-  display: flex;
-}
-
-
-col {
-  margin: 10px;
+.project-img {
+  max-width: 100%;
 }
 
 .featured {
